plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.15'
	id 'io.spring.dependency-management' version '1.1.3'
	id 'org.sonarqube' version '4.3.0.3225'
}

apply from: 'gradle/tasks/sonarqube.gradle'

group = 'com.exemple'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	
	implementation 'org.apache.camel.springboot:camel-spring-boot-starter:3.21.0'
	implementation 'org.apache.camel.springboot:camel-core-starter:3.21.0'
	implementation 'org.apache.camel.springboot:camel-master-starter:3.21.0'
	implementation 'org.apache.camel.springboot:camel-kubernetes-starter:3.21.0'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
